--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,7 @@
 // app global css in SCSS form
+.q-btn {
+  &.bg-secondary {
+    color: #6d4c41 !important;
+    font-weight: 700 !important;
+  }
+}
