--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -13,7 +13,7 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary: #5d4037;
-$secondary: #ffc107;
+$secondary: #ffd998;
 $accent: #9c27b0;
 
 $dark: #1d1d1d;
