--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -18,7 +18,7 @@ $accent: #9c27b0;
 
 $dark: #1d1d1d;
 $dark-page: #121212;
-
+$shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2), 0 0px 10px rgba(0, 0, 0, 0.24);
 $positive: #21ba45;
 $negative: #c10015;
 $info: #31ccec;
