--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,7 +1,7 @@
 // app global css in SCSS form
 .q-btn {
   &.bg-secondary {
-    color: #6d4c41 !important;
+    color: #fff !important;
     font-weight: 700 !important;
   }
 }
