--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,8 +12,8 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #5d4037;
-$secondary: #ffd998;
+$primary: #2196f3;
+$secondary: #3f51b5;
 $accent: #9c27b0;
 
 $dark: #1d1d1d;
